deployment/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
    - helloworld
  http:
  - match:
    - headers:
        end-user:
          exact: dev1
    route:
    - destination:
        host: helloworld
        subset: f002  
  - route:
    - destination:
        host: helloworld
        subset: f001
